--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
@@ -61,8 +62,10 @@
     "postcss": "8.4.30",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
@@ -77,6 +80,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.9",
     "jsdom": "^26.0.0",
