--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -43,9 +43,9 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.0",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
+    "@types/react": "19.1.0",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "18.2.7",
+    "@types/react-dom": "19.1.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -54,18 +54,18 @@
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "15.2.5",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "15.2.5",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "qrcode.react": "^3.1.0",
-    "react": "18.2.0",
+    "react": "19.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
@@ -86,5 +86,9 @@
     "@vitest/coverage-v8": "^3.0.9",
     "jsdom": "^26.0.0",
     "vitest": "^3.0.9"
+  },
+  "overrides": {
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.2"
   }
 }
