--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_DIRECTUS_BASE_URL=http://localhost/directus
-ACCESS_TOKEN_TTL="2m"
-REFRESH_TOKEN_TTL="1d"
+NEXT_PUBLIC_ACCESS_TOKEN_TTL="2m"
+NEXT_PUBLIC_REFRESH_TOKEN_TTL="1d"
