--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-next": "15.2.5",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
+    "jose": "^6.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next": "15.2.5",
