--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "15.2.5",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jose": "^6.0.11",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next": "15.2.5",
