--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-to-print": "^3.1.0",
     "recharts": "^2.12.7",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.2",
