--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "yet-another-react-lightbox": "^3.23.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
