--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "19.1.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "19.1.2",
+    "@zxing/browser": "^0.1.5",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
